fix other-area icon position on IE

--- a/app/styles/homepage.scss
+++ b/app/styles/homepage.scss
@@ -70,7 +70,7 @@
 .other-area  {
   position: absolute;
   width: 90px;
-  margin-top: -120px;
+  top: 400px;
 }
 
 .other-area > img {
